--- a/sample/erc725/package.json
+++ b/sample/erc725/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "openzeppelin-solidity": "^2.1.2",
     "truffle-hdwallet-provider": "^1.0.4"
+  },
+  "dependencies": {
+    "web3": "^1.0.0-beta.46"
   }
 }
