--- a/sample/ipfs/package.json
+++ b/sample/ipfs/package.json
@@ -18,9 +18,11 @@
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "eth-crypto": "^1.3.2",
+    "ethers": "^4.0.25",
     "ipfs-api": "^26.1.2",
     "nuxt": "^2.0.0",
-    "perf_hooks": "^0.0.1"
+    "perf_hooks": "^0.0.1",
+    "web3": "^1.0.0-beta.46"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
