--- a/sample/ipfs/package.json
+++ b/sample/ipfs/package.json
@@ -5,7 +5,7 @@
   "author": "daiki01240",
   "private": true,
   "scripts": {
-    "dev": "nuxt --host 0,0,0,0 --port 3001",
+    "dev": "nuxt --hostname 0.0.0.0 --port 3000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
