--- a/submit/app/package.json
+++ b/submit/app/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "eth-crypto": "^1.3.2",
+    "ipfs-api": "^26.1.2",
     "nuxt": "^2.3.4",
     "vuetify": "^1.3.14",
     "vuetify-loader": "^1.0.8",
