--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base    = "submit/app"
-  publish = "dist"
-  command = "npm run build"
+  publish = "submit/app/dist"
+  command = "npm run generate"
