--- a/submit/app/package.json
+++ b/submit/app/package.json
@@ -16,6 +16,7 @@
     "eth-crypto": "^1.3.2",
     "ipfs-api": "^26.1.2",
     "nuxt": "^2.3.4",
+    "qrcode": "^1.3.3",
     "vuetify": "^1.3.14",
     "vuetify-loader": "^1.0.8",
     "web3": "^1.0.0-beta.46"
