--- a/submit/app/package.json
+++ b/submit/app/package.json
@@ -15,8 +15,12 @@
     "cross-env": "^5.2.0",
     "eth-crypto": "^1.3.2",
     "ipfs-api": "^26.1.2",
+    "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^2.2.0",
+    "node-fetch": "^2.3.0",
     "nuxt": "^2.3.4",
     "qrcode": "^1.3.3",
+    "querystring": "^0.2.0",
     "vuetify": "^1.3.14",
     "vuetify-loader": "^1.0.8",
     "web3": "^1.0.0-beta.46"
